--- a/css/main.css
+++ b/css/main.css
@@ -38,11 +38,11 @@ body {
   height: 100%;
   margin: 0;
   background-color: #f8f8f8;
+  /* max-width: 1400px; */
 }
 
 header {
   margin: 0;
-  padding-right: 75px;
   background-color: #abeafa;
   display: flex;
   justify-content: space-between;
@@ -50,47 +50,62 @@ header {
 
 .logo {
   margin-top: 25px;
-  margin-left: 85px;
+  margin-left: 135px;
+}
+
+.logo img {
+  width: 110px;
 }
 
 .icons {
-  margin-top: 50px;
-  margin-right: -125px;
+  margin-top: 45px;
   display: flex;
+  margin-right: 130px;
 }
 /* тут обрати внимание на вложенный селектор */
 .icons img {
-  height: 20px;
+  height: 15px;
 }
 /* обрати внимание на этот стиль, тут работает псевдокласс */
-.icons img:not(:first-child) {
+.icons a:not(:first-child) {
   margin-left: 10px;
 }
 
 .content-site-top {
-  height: 560px;
+  height: 500px;
   background-color: #abeafa;
   width: 100%;
-  padding-top: 200px;
-  padding-left: 170px;
   display: flex;
   justify-content: space-between;
 }
 
 .container {
   width: 100%;
-  padding-left: 150px;
-  padding-right: 200px;
+  /* padding-left: 150px;
+  padding-right: 200px; */
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.wrapper-sie-top {
+  padding: 0 50px 0 90px;
+}
+.wrapper-socials {
+  flex-direction: column;
 }
 
 .yellow_block {
   font-family: "Raleway", sans-serif;
-  width: 271px;
-  height: 300px;
+  width: 240px;
+  height: 270px;
   background-color: #fff51f;
   padding: 40px 10px 50px 20px;
-  margin-bottom: 0px;
-  margin-left: 20px;
+  margin: 175px 0 0 -15px;
 }
 
 .yellow_block h3 {
@@ -110,26 +125,26 @@ header {
 
 .slide-content {
   font-family: "Raleway", sans-serif;
-  width: 370px;
+  width: 360px;
   height: 230px;
   background-color: transparent;
-  margin-top: -140px;
-  margin-right: -130px;
+  margin: 45px 45px 0 0;
 }
 
 .slide-content h3 {
   line-height: 35px;
-  font-size: 46px;
+  font-size: 44px;
   color: #fff51f;
   font-weight: 800;
   margin-bottom: 0;
 }
 
 .slide-content p {
+  width: 80%;
   display: inline-block;
-  font-size: 21px;
+  font-size: 18px;
   color: #fff51f;
-  font-weight: 400;
+  font-weight: 200;
   margin-top: 0;
   margin-bottom: 68px;
 }
@@ -148,7 +163,7 @@ header {
 
 .sidebar-product {
   font-family: "Roboto", sans-serif;
-  margin: -20px 45px 0 200px;
+  margin: -14px 129px 0 148px;
   display: flex;
   justify-content: center;
   background-color: transparent;
@@ -157,8 +172,9 @@ header {
 .sidebar {
   font-size: 14px;
   align-content: center;
-  width: 300px;
+  width: 230px;
   background-color: transparent;
+  margin: 0 23px 0 25px;
 }
 
 .menu {
@@ -173,11 +189,11 @@ header {
 }
 
 .menu li {
-  padding: 10px;
+  padding: 6px 0px 9px 11px;
 }
 
 .menu > li > span {
-  padding: 30px;
+  padding: 22px;
 }
 
 .menu .submenu {
@@ -211,6 +227,7 @@ ul li {
   padding: 0px;
   left: 100%;
   width: 165px;
+  z-index: 3;
 }
 /* если before, то лучше используй контент. https://graphemica.com/ тут можешь найти код иконок для css */
 .submenu li:before {
@@ -222,42 +239,39 @@ ul li {
   margin: 0;
   background-color: #333333;
   color: #ffffff;
-  padding: 25px;
-  padding-left: 40px;
+  padding: 25px 25px 25px 35px;
 }
 
 .annonce {
-  margin-top: 30px;
-  width: 270px;
-  height: 300px;
+  margin: -9px 0px 0 -12px;
+  width: 240px;
+  height: 272px;
   background-color: #e0e0e0;
   text-align: start;
 }
 
 .annonce > h4 {
-  padding-top: 105px;
-  padding-left: 140px;
+  padding: 111px 0px 0px 125px;
   line-height: 35px;
   font-family: "Raleway Heavy";
   font-weight: normal;
   font-style: italic;
-  font-size: 36px;
+  font-size: 30px;
   color: #333333;
 }
 
 .products {
-  margin-left: 30px;
+  margin: 0 40px 0 0;
   flex-direction: column;
 }
 
 .products h3 {
-  font-size: 22px;
-  padding-top: 10px;
-  padding-left: 20px;
+  padding: 3px 0px 0 24px;
+  margin: 20px 0 22px 0;
 }
 
 .new-products {
-  width: 870px;
+  width: 780px;
   background-color: #f8f8f8;
   color: #707070;
   font-style: italic;
@@ -273,10 +287,10 @@ ul li {
 /*  */
 
 .new-products .product {
-  height: 320px;
-  width: 270px;
+  height: 285px;
+  width: 240px;
   background-color: #ffffff;
-  margin-bottom: 20px;
+  margin: 0px 0 27px 0;
 }
 
 .new-products .product .text-product {
@@ -289,8 +303,8 @@ ul li {
   font-style: italic;
   font-weight: bold;
   color: black;
-  font-size: 14px;
-  margin-left: 20px;
+  font-size: 13px;
+  margin-left: 22px;
 }
 
 .price {
@@ -298,8 +312,8 @@ ul li {
   font-style: italic;
   font-weight: bold;
   color: black;
-  font-size: 18px;
-  margin-right: 25px;
+  font-size: 17px;
+  margin-right: 23px;
   text-align: right;
 }
 
@@ -321,7 +335,7 @@ ul li {
 
 .product .name,
 .text-product .price {
-  margin-top: 15px;
+  margin-top: 12px;
 }
 
 .text-product .price {
@@ -339,39 +353,39 @@ ul li {
   content: "";
   position: absolute; /* Абсолютное позиционирование */
   /* поскольку это квадрат, его надо смещать на его размер (бордера) */
-  right: -35px;
-  top: -35px;
-  border: 35px solid transparent; /* Прозрачные границы */
-  border-top: 35px solid red; /* Добавляем треугольник */
+  right: -36px;
+  top: -33px;
+  border: 30px solid transparent;
+  border-top: 30px solid red; /* Добавляем треугольник */
   transform: rotate(225deg);
 }
 .triangle-new::before {
   content: "NEW";
   position: absolute; /* Абсолютное позиционирование */
-  right: 5px;
-  top: 5px;
+  right: 0px;
+  top: 4px;
   /* нужно для того, чтобы отобразить выше треугольника */
   z-index: 122;
-  font-size: 12px;
+  font-size: 9px;
   color: #fff;
 }
 
 .triangle-hot::after {
   content: "";
   position: absolute;
-  right: -35px;
-  top: -35px;
-  border: 35px solid transparent;
-  border-top: 35px solid yellow;
+  right: -36px;
+  top: -33px;
+  border: 30px solid transparent;
+  border-top: 30px solid yellow;
   transform: rotate(225deg);
 }
 .triangle-hot::before {
   content: "HOT";
   position: absolute;
-  right: 5px;
-  top: 5px;
+  right: 0px;
+  top: 4px;
   z-index: 122;
-  font-size: 12px;
+  font-size: 9px;
   color: black;
 }
 
@@ -382,20 +396,19 @@ ul li {
 }
 
 .new-products img {
-  padding-top: 10px;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 10px 10px 0 10px;
+  width: 243px;
 }
 
 .top-products {
-  width: 870px;
+  width: 780px;
   background-color: #f8f8f8;
   color: #707070;
   font-style: italic;
   font-size: 20px;
   display: flex;
   flex-direction: column;
-  margin-top: 25px;
+  margin-top: 19px;
 }
 
 .top-products .cards-parent {
@@ -404,10 +417,10 @@ ul li {
 }
 
 .top-products .product {
-  height: 320px;
-  width: 270px;
+  height: 285px;
+  width: 240px;
   background-color: #ffffff;
-  margin-bottom: 20px;
+  margin: 0px 0 27px 0;
 }
 
 .top-products .product .text-product {
@@ -416,20 +429,19 @@ ul li {
 }
 
 .top-products img {
-  padding-top: 10px;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 10px 10px 0 10px;
+  width: 243px;
 }
 
 .sale-products {
-  width: 870px;
+  width: 780px;
   background-color: #f8f8f8;
   color: #707070;
   font-style: italic;
   font-size: 20px;
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
+  margin-top: 17px;
 }
 
 .sale-products .cards-parent {
@@ -438,10 +450,10 @@ ul li {
 }
 
 .sale-products .product {
-  height: 320px;
-  width: 270px;
+  height: 285px;
+  width: 240px;
   background-color: #ffffff;
-  margin-bottom: 20px;
+  margin: 0px 0 27px 0;
 }
 
 .sale-products .product .text-product {
@@ -450,35 +462,34 @@ ul li {
 }
 
 .sale-products img {
-  padding-top: 10px;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 10px 10px 0 10px;
+  width: 243px;
 }
 
 .brands {
-  width: 1170px;
-  height: 160px;
-  margin-left: 160px;
-  margin-top: 20px;
+  width: 1055px;
+  height: 150px;
+  margin: 0 auto;
   background-color: #ffffff;
   align-content: center;
 }
 
 .brands img {
-  margin-top: 70px;
-  margin-left: 14px;
+  margin: 70px 14px;
+  width: 1029px;
+}
+
+.wrapper-socials {
+  width: 1055px;
 }
 
 .social-content {
-  display: flex;
-  flex-direction: column;
-  margin-left: 160px;
+  margin: 0 auto;
   background-color: #eaeaea;
-  width: 1170px;
 }
 
 .instagram {
-  padding-top: 30px;
+  padding-top: 23px;
   display: flex;
   flex-direction: column;
 }
@@ -498,12 +509,15 @@ ul li {
 .instagram .icon {
   display: flex;
   justify-content: center;
-  padding-bottom: 5px;
-  padding-left: 20px;
+  padding-left: 33px;
 }
 
 .livello img:not(:first-child) {
   margin-left: 8px;
+}
+
+.livello img {
+  width: 165px;
 }
 
 .icon img {
@@ -517,38 +531,49 @@ ul li {
 
 .f-icon {
   background-color: #3b5997;
-  width: 390px;
-  height: 150px;
+  width: 348px;
+  height: 137px;
   float: left;
 }
 
 .tw-icon {
   background-color: #3fccfd;
-  width: 390px;
-  height: 150px;
+  width: 351px;
+  height: 137px;
   float: left;
 }
 
 .pin-icon {
   background-color: #cb2027;
-  width: 390px;
-  height: 150px;
+  width: 351px;
+  height: 137px;
   float: left;
 }
 
-.social img {
+.f-icon img {
+  margin-top: 39px;
+  margin-left: 160px;
+}
+
+.tw-icon img {
   margin-top: 44px;
-  margin-left: 180px;
+  margin-left: 145px;
+}
+
+.pin-icon img {
+  margin-top: 38px;
+  margin-left: 145px;
+}
+
+.wrapper-footer {
+  padding: 44px 0px;
 }
 
 .info-block {
   background-color: #373737;
-  width: 100%;
+  width: 1055px;
+  margin: 0 auto;
   display: flex;
-  padding-left: 190px;
-  padding-right: 25px;
-  padding-top: 55px;
-  padding-bottom: 40px;
 }
 
 .menu-block {
@@ -556,7 +581,7 @@ ul li {
   justify-content: space-between;
 }
 
-.info-block h3 {
+.menu-block h3 {
   font-family: "Raleway Heavy";
   font-weight: normal;
   font-style: normal;
@@ -564,10 +589,28 @@ ul li {
   color: white;
 }
 
+.newsletter h3 {
+  font-family: "Raleway Heavy";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 18px;
+  color: white;
+  padding: 0 0 0 9px;
+}
+
+.about h3 {
+  font-family: "Raleway Heavy";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 18px;
+  color: white;
+  margin: 18px 0 -8px 0;
+}
+
 .menu-block a {
   font-family: "Roboto";
   font-style: normal;
-  font-size: 12px;
+  font-size: 9px;
   color: white;
   text-decoration-line: none;
   padding-top: 5px;
@@ -575,6 +618,7 @@ ul li {
 
 .category {
   width: 200px;
+  padding-left: 20px;
 }
 
 .category div {
@@ -583,7 +627,7 @@ ul li {
 }
 
 .account {
-  width: 200px;
+  width: 177px;
 }
 
 .account div {
@@ -607,16 +651,18 @@ ul li {
 .newsletter p {
   font-family: "Roboto";
   font-style: normal;
-  font-size: 12px;
+  font-size: 11px;
   color: white;
+  margin: -14px 0px 12px 8px;
 }
 
 .newsletter input {
   border: none;
   background-color: yellow;
-  width: 180px;
-  height: 30px;
+  width: 163px;
+  height: 28px;
   padding: 0;
+  margin: 0 0 0 9px;
 }
 
 input::-webkit-input-placeholder {
@@ -673,8 +719,8 @@ input:focus:-ms-input-placeholder {
   font-size: 12px;
   font-style: normal;
   border: 0px;
-  height: 30px;
-  width: 70px;
+  height: 28px;
+  width: 62px;
   background-color: black;
   color: white;
   padding: 0;
@@ -693,20 +739,25 @@ input:focus {
 .payment {
   display: flex;
   justify-content: space-between;
-  width: 267px;
-  padding-top: 35px;
+  width: 237px;
+  padding-top: 38px;
+}
+
+.payment img {
+  width: 35px;
 }
 
 .about {
   width: 273px;
-  padding-left: 25px;
+  padding: 1px 0 0 32px;
 }
 
 .about .text {
   font-family: "Roboto";
   font-style: normal;
-  font-size: 12px;
+  font-size: 11px;
   color: white;
+  margin: 10px 0 -5px 0;
 }
 
 .about .email {
@@ -722,6 +773,7 @@ input:focus {
   font-style: normal;
   font-size: 14px;
   color: white;
+  margin: 13px 0px -7px 0px;
 }
 
 .number a {
@@ -742,12 +794,17 @@ input:focus {
 
 footer {
   width: 100%;
-  display: flex;
+  background-color: #373737;
   flex-direction: column;
 }
 
-.foot {
+.foot-copyright {
+  width: 100%;
   background-color: #333333;
+}
+
+.foot {
+  width: inherit;
   display: flex;
   justify-content: space-between;
 }
@@ -756,8 +813,8 @@ footer {
   font-family: "Roboto";
   font-style: normal;
   color: #dad9d9;
-  font-size: 12px;
-  margin-left: 160px;
+  font-size: 11px;
+  margin-left: 75px;
 }
 
 .copyright img {
@@ -765,8 +822,8 @@ footer {
 }
 
 .icons-foot {
-  margin-top: 10px;
-  margin-right: 25px;
+  margin-top: 16px;
+  margin-right: 96px;
   display: flex;
   color: white;
 }
@@ -816,4 +873,13 @@ footer {
   content: "\f09e";
   font-family: "FontAwesome";
   color: white;
+}
+.Site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.Site-content {
+  flex: 1;
 }
