--- a/css/product.css
+++ b/css/product.css
@@ -1,68 +1,5 @@
-@font-face {
-  font-family: "Raleway Heavy";
-  src: url("/fonts/Raleway_Heavy/Raleway-Heavy.eot") format("eot"),
-    url("/fonts/Raleway_Heavy/Raleway-Heavy.woff") format("woff"),
-    url("/fonts/Raleway_Heavy/Raleway-Heavy.ttf") format("truetype"),
-    url("/fonts/Raleway_Heavy/Raleway-Heavy.svg") format("svg");
-
-  font-family: "FontAwesome";
-  src: url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.eot")
-      format("eot"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.svg")
-      format("svg"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.ttf")
-      format("truetype"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.woff")
-      format("woff"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.woff2")
-      format("woff2"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.eot")
-      format("eot"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.svg")
-      format("svg"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.ttf")
-      format("truetype"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.woff")
-      format("woff"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.woff2")
-      format("woff2");
-}
-
-* {
-  box-sizing: border-box;
-  justify-content: space-between;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  background-color: #f8f8f8;
-}
-
-header {
-  margin: 0;
+.container {
   height: 316px;
-  background-color: #abeafa;
-  display: flex;
-  justify-content: space-between;
-}
-
-.Site {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
-.Site-content {
-  flex: 1;
-}
-
-.wrapper {
-  display: flex;
-  justify-content: space-between;
-  width: 1200px;
-  margin: 0 auto;
 }
 
 .wrapper-footer {
@@ -73,34 +10,7 @@ header {
   width: 1055px;
 }
 
-.container {
-  width: 100%;
-}
-
-.logo {
-  margin-top: 22px;
-  margin-left: 137px;
-}
-
-.logo img {
-  width: 110px;
-}
-
-.icons {
-  margin-top: 45px;
-  display: flex;
-  margin-right: 132px;
-}
-
-.icons img {
-  height: 15px;
-}
-
-.icons a:not(:first-child) {
-  margin-left: 10px;
-}
-
-.sidebar-product {
+.sidebar-products {
   font-family: "Roboto", sans-serif;
   margin: 0 90px 5px 148px;
   display: flex;
@@ -108,7 +18,7 @@ header {
   background-color: transparent;
 }
 
-.sidebar {
+.sidebar-p {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   align-content: center;
@@ -177,14 +87,14 @@ ul li {
   padding: 0 5px;
 }
 
-.sidebar > h4 {
+.sidebar-p > h4 {
   margin: 0;
   background-color: #333333;
   color: #ffffff;
   padding: 25px 25px 25px 35px;
 }
 
-.annonce {
+.annonce-p {
   margin-top: 1033px;
   width: 241px;
   height: 272px;
@@ -192,7 +102,7 @@ ul li {
   text-align: start;
 }
 
-.annonce > h4 {
+.annonce-p > h4 {
   padding: 112px 0 0 123px;
   line-height: 35px;
   font-family: "Raleway Heavy";
@@ -202,8 +112,12 @@ ul li {
   color: #333333;
 }
 
-.products {
+.product-p {
   flex-direction: column;
+}
+
+.product-p h6 span {
+  background-color: yellow;
 }
 
 .product-selected {
@@ -323,7 +237,7 @@ ul li {
   margin-top: 6px;
 }
 
-.products h3 {
+.product-p h3 {
   font-family: "Raleway";
   color: #333333;
   font-style: italic;
@@ -336,7 +250,7 @@ ul li {
   font-family: "Roboto";
   font-style: normal;
   color: #989898;
-  font-size: 12px;
+  font-size: 11px;
   width: 245px;
   height: 20px;
 }
@@ -349,10 +263,6 @@ ul li {
   font-size: 12px;
   width: 245px;
   height: 20px;
-}
-
-.products h6 span {
-  background-color: yellow;
 }
 
 .like-products {
@@ -505,348 +415,17 @@ ul li {
   width: 243px;
 }
 
-.social {
-  padding-top: 50px;
-}
-
 .f-icon {
-  background-color: #3b5997;
   width: 351px;
   height: 135px;
-  float: left;
 }
 
 .tw-icon {
-  background-color: #3fccfd;
   width: 351px;
   height: 135px;
-  float: left;
 }
 
 .pin-icon {
-  background-color: #cb2027;
   width: 351px;
   height: 135px;
-  float: left;
-}
-
-.f-icon img {
-  margin-top: 39px;
-  margin-left: 160px;
-}
-
-.tw-icon img {
-  margin-top: 44px;
-  margin-left: 145px;
-}
-
-.pin-icon img {
-  margin-top: 38px;
-  margin-left: 145px;
-}
-
-.info-block {
-  background-color: #373737;
-  width: 1055px;
-  margin: 0 auto;
-  display: flex;
-}
-
-.menu-block {
-  display: flex;
-  justify-content: space-between;
-}
-
-.menu-block h3 {
-  font-family: "Raleway Heavy";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 18px;
-  color: white;
-}
-
-.newsletter h3 {
-  font-family: "Raleway Heavy";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 18px;
-  color: white;
-  padding: 0 0 0 9px;
-}
-
-.about h3 {
-  font-family: "Raleway Heavy";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 18px;
-  color: white;
-  margin: 18px 0 -8px 0;
-}
-
-.menu-block a {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 9px;
-  color: white;
-  text-decoration-line: none;
-  padding-top: 5px;
-}
-
-.category {
-  width: 200px;
-  padding-left: 20px;
-}
-
-.category div {
-  display: flex;
-  flex-direction: column;
-}
-
-.account {
-  width: 177px;
-}
-
-.account div {
-  display: flex;
-  flex-direction: column;
-}
-
-.support {
-  width: 160px;
-}
-
-.support div {
-  display: flex;
-  flex-direction: column;
-}
-
-.newsletter {
-  width: 255px;
-}
-
-.newsletter p {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 11px;
-  color: white;
-  margin: -14px 0px 12px 8px;
-}
-
-.newsletter input {
-  border: none;
-  background-color: yellow;
-  width: 163px;
-  height: 28px;
-  padding: 0;
-  margin: 0 0 0 9px;
-}
-
-.newsletter input::-webkit-input-placeholder {
-  font-family: "Roboto";
-  font-weight: 700;
-  font-size: 12px;
-  color: #333333;
-  padding-left: 20px;
-}
-
-.newsletter input:-moz-placeholder {
-  font-family: "Roboto";
-  font-weight: 700;
-  font-size: 12px;
-  color: #333333;
-  padding-left: 20px;
-}
-
-input::-webkit-input-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-input::-moz-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-input:-moz-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-input:-ms-input-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-input:focus::-webkit-input-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-input:focus::-moz-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-input:focus:-moz-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-input:focus:-ms-input-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.newsletter button {
-  font-family: "Roboto";
-  font-size: 12px;
-  font-style: normal;
-  border: 0px;
-  height: 28px;
-  width: 62px;
-  background-color: black;
-  color: white;
-  padding: 0;
-  margin-left: -3px;
-}
-
-button:focus {
-  outline: none;
-}
-
-input:focus {
-  outline: none;
-  padding-left: 20px;
-}
-
-.payment {
-  display: flex;
-  justify-content: space-between;
-  width: 237px;
-  padding-top: 38px;
-}
-
-.payment img {
-  width: 35px;
-}
-
-.about {
-  width: 273px;
-  padding: 1px 0 0 32px;
-}
-
-.about .text {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 11px;
-  color: white;
-  margin: 10px 0 -5px 0;
-}
-
-.about .email {
-  color: yellow;
-}
-
-.about span {
-  padding-left: 10px;
-}
-
-.about .phone {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 14px;
-  color: white;
-  margin: 13px 0px -7px 0px;
-}
-
-.number a {
-  color: white;
-  text-decoration: none;
-}
-
-.about .mail {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 14px;
-  color: white;
-}
-
-.email a {
-  color: yellow;
-}
-
-footer {
-  width: 100%;
-  background-color: #373737;
-  flex-direction: column;
-}
-
-.foot-copyright {
-  width: 100%;
-  background-color: #333333;
-}
-
-.foot {
-  width: inherit;
-  display: flex;
-  justify-content: space-between;
-}
-
-.copyright {
-  font-family: "Roboto";
-  font-style: normal;
-  color: #dad9d9;
-  font-size: 11px;
-  margin-left: 75px;
-}
-
-.copyright img {
-  margin-right: 5px;
-}
-
-.icons-foot {
-  margin-top: 16px;
-  margin-right: 96px;
-  display: flex;
-  color: white;
-}
-
-.icons-foot span {
-  margin-left: 10px;
-  object-fit: none;
-}
-
-.facebook-foot::before {
-  content: "\f39e";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.twitter-foot::before {
-  content: "\f099";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.pinterest-foot::before {
-  content: "\f231";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.googleplus-foot::before {
-  content: "\f0d5";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.tumblr-foot::before {
-  content: "\f173";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.instagram-foot::before {
-  content: "\f16d";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.rss-foot::before {
-  content: "\f09e";
-  font-family: "FontAwesome";
-  color: white;
 }
