--- a/css/shop-grid.css
+++ b/css/shop-grid.css
@@ -1,123 +1,22 @@
-@font-face {
-  font-family: "Raleway Heavy";
-  src: url("/fonts/Raleway_Heavy/Raleway-Heavy.eot") format("eot"),
-    url("/fonts/Raleway_Heavy/Raleway-Heavy.woff") format("woff"),
-    url("/fonts/Raleway_Heavy/Raleway-Heavy.ttf") format("truetype"),
-    url("/fonts/Raleway_Heavy/Raleway-Heavy.svg") format("svg");
-
-  font-family: "FontAwesome";
-  src: url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.eot")
-      format("eot"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.svg")
-      format("svg"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.ttf")
-      format("truetype"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.woff")
-      format("woff"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-brands-400.woff2")
-      format("woff2"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.eot")
-      format("eot"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.svg")
-      format("svg"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.ttf")
-      format("truetype"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.woff")
-      format("woff"),
-    url("/fonts/fontawesome-free-5.14.0-web/webfonts/fa-solid-900.woff2")
-      format("woff2");
-}
-
-* {
-  box-sizing: border-box;
-  justify-content: space-between;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  background-color: #f8f8f8;
-  /* max-width: 1400px; */
-}
-
-.site {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
 header {
-  margin: 0;
   height: 316px;
-  background-color: #abeafa;
-  display: flex;
-  justify-content: space-between;
-}
-
-.site-content {
-  flex: 1;
-}
-
-.container {
-  width: 100%;
-}
-
-footer {
-  width: 100%;
-  background-color: #373737;
-  flex-direction: column;
-}
-
-.wrapper {
-  display: flex;
-  justify-content: space-between;
-  width: 1200px;
-  margin: 0 auto;
-}
-
-.wrapper-footer {
-  padding: 45px 0px;
 }
 
 .wrapper-socials {
   width: 1055px;
 }
 
-.logo {
-  margin-top: 22px;
-  margin-left: 137px;
-}
-
-.logo img {
-  width: 110px;
-}
-
-.icons {
-  margin: 45px -15px;
-  display: flex;
-}
-
-.icons img {
-  height: 15px;
-}
-/* со сменой языка все ломает этот стил, так как шел рекурсивно и ниже.
- Ты добавила все в блок иконок. Делаем его только для прямых наследников и все ок */
-.icons > a:not(:first-child) {
-  margin-left: 10px;
-}
-
 .dropdown {
-  margin: 2px 100px 0 6px;
+  margin: 2px -40px 0 6px;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #abeafa;
-  width: 30px;
+  width: 40px;
   top: 60px;
-  right: 163px;
+  right: 171px;
 }
 
 .dropbtn {
@@ -157,430 +56,26 @@ footer {
   display: block;
 }
 
-.social {
-  padding-top: 50px;
-}
-
 .f-icon {
-  background-color: #3b5997;
   width: 351px;
   height: 135px;
-  float: left;
 }
 
 .tw-icon {
-  background-color: #3fccfd;
   width: 351px;
   height: 135px;
-  float: left;
 }
 
 .pin-icon {
-  background-color: #cb2027;
   width: 351px;
   height: 135px;
-  float: left;
-}
-
-.f-icon img {
-  margin-top: 39px;
-  margin-left: 160px;
-}
-
-.tw-icon img {
-  margin-top: 44px;
-  margin-left: 145px;
-}
-
-.pin-icon img {
-  margin-top: 38px;
-  margin-left: 145px;
-}
-
-.info-block {
-  background-color: #373737;
-  width: 1055px;
-  margin: 0 auto;
-  display: flex;
-}
-
-.menu-block {
-  display: flex;
-  justify-content: space-between;
-}
-
-.menu-block h3 {
-  font-family: "Raleway Heavy";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 18px;
-  color: white;
-}
-
-.newsletter h3 {
-  font-family: "Raleway Heavy";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 18px;
-  color: white;
-  padding: 0 0 0 9px;
-}
-
-.about h3 {
-  font-family: "Raleway Heavy";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 18px;
-  color: white;
-  margin: 18px 0 -8px 0;
-}
-
-.menu-block a {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 9px;
-  color: white;
-  text-decoration-line: none;
-  padding-top: 5px;
-}
-
-.category {
-  width: 200px;
-  padding-left: 20px;
-}
-
-.category div {
-  display: flex;
-  flex-direction: column;
-}
-
-.account {
-  width: 177px;
-}
-
-.account div {
-  display: flex;
-  flex-direction: column;
-}
-
-.support {
-  width: 160px;
-}
-
-.support div {
-  display: flex;
-  flex-direction: column;
-}
-
-.newsletter {
-  width: 255px;
-}
-
-.newsletter p {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 11px;
-  color: white;
-  margin: -14px 0px 12px 8px;
-}
-
-.newsletter input {
-  border: none;
-  background-color: yellow;
-  width: 163px;
-  height: 28px;
-  padding: 0;
-  margin: 0 0 0 9px;
-}
-
-input::-webkit-input-placeholder {
-  font-family: "Roboto";
-  font-weight: 700;
-  font-size: 12px;
-  color: #333333;
-  padding-left: 20px;
-}
-
-input:-moz-placeholder {
-  font-family: "Roboto";
-  font-weight: 700;
-  font-size: 12px;
-  color: #333333;
-  padding-left: 20px;
-}
-
-input::-webkit-input-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-input::-moz-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-input:-moz-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-input:-ms-input-placeholder {
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-input:focus::-webkit-input-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-input:focus::-moz-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-input:focus:-moz-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-input:focus:-ms-input-placeholder {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.newsletter button {
-  font-family: "Roboto";
-  font-size: 12px;
-  font-style: normal;
-  border: 0px;
-  height: 28px;
-  width: 62px;
-  background-color: black;
-  color: white;
-  padding: 0;
-  margin-left: -3px;
-}
-
-button:focus {
-  outline: none;
-}
-
-input:focus {
-  outline: none;
-  padding-left: 20px;
-}
-
-.payment {
-  display: flex;
-  justify-content: space-between;
-  width: 237px;
-  padding-top: 38px;
-}
-
-.payment img {
-  width: 35px;
-}
-
-.about {
-  width: 273px;
-  padding: 1px 0 0 32px;
-}
-
-.about .text {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 11px;
-  color: white;
-  margin: 10px 0 -5px 0;
-}
-
-.about .email {
-  color: yellow;
-}
-
-.about span {
-  padding-left: 10px;
-}
-
-.about .phone {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 14px;
-  color: white;
-  margin: 13px 0px -7px 0px;
-}
-
-.number a {
-  color: white;
-  text-decoration: none;
-}
-
-.about .mail {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 14px;
-  color: white;
-}
-
-.email a {
-  color: yellow;
-}
-
-.foot-copyright {
-  width: 100%;
-  background-color: #333333;
-}
-
-.foot {
-  width: inherit;
-  display: flex;
-  justify-content: space-between;
-}
-
-.copyright {
-  font-family: "Roboto";
-  font-style: normal;
-  color: #dad9d9;
-  font-size: 11px;
-  margin-left: 75px;
-}
-
-.copyright img {
-  margin-right: 5px;
-}
-
-.icons-foot {
-  margin-top: 16px;
-  margin-right: 96px;
-  display: flex;
-  color: white;
-}
-
-.icons-foot span {
-  margin-left: 10px;
-  object-fit: none;
-}
-
-.facebook-foot::before {
-  content: "\f39e";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.twitter-foot::before {
-  content: "\f099";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.pinterest-foot::before {
-  content: "\f231";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.googleplus-foot::before {
-  content: "\f0d5";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.tumblr-foot::before {
-  content: "\f173";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.instagram-foot::before {
-  content: "\f16d";
-  font-family: "FontAwesome";
-  color: white;
-}
-
-.rss-foot::before {
-  content: "\f09e";
-  font-family: "FontAwesome";
-  color: white;
 }
 
 .sidebar-product {
-  font-family: "Roboto", sans-serif;
-  margin: 0 129px 0 148px;
-  display: flex;
-  justify-content: center;
-  background-color: transparent;
+  padding-top: 13px;
 }
 
-.sidebar {
-  font-size: 14px;
-  align-content: center;
-  width: 230px;
-  background-color: transparent;
-  margin: 0 23px 0 25px;
-}
-
-.menu {
-  margin: 0px;
-  list-style: none;
-  font-size: 14px;
-  font-weight: 800;
-  padding: 0px;
-  background-color: #26d2fc;
-}
-
-.menu a {
-  text-decoration: none;
-}
-
-.menu li {
-  padding: 6px 0px 9px 11px;
-}
-
-.menu > li > span {
-  padding: 22px;
-}
-
-.menu .submenu {
-  display: none;
-  width: 155px;
-  color: #333333;
-  background-color: #26d2fc;
-}
-
-ul li {
-  display: block;
-}
-
-.menu li:hover {
-  color: #ffffff;
-  background-color: #333333;
-  cursor: pointer;
-}
-
-.parent-submenu:hover > .submenu {
-  display: block;
-}
-
-.parent-submenu:hover {
-  position: relative;
-}
-
-.submenu {
-  position: absolute;
-  top: 0;
-  padding: 0px;
-  left: 100%;
-  width: 165px;
-  z-index: 3;
-}
-/* если before, то лучше используй контент. https://graphemica.com/ тут можешь найти код иконок для css */
-.submenu li:before {
-  content: "\0025A0";
-  padding: 0 5px;
-}
-
-.sidebar > h4 {
-  margin: 0;
-  background-color: #333333;
-  color: #ffffff;
-  padding: 25px 25px 25px 35px;
-}
-
-.annonce {
+.annonce-grid {
   margin: 49px 0px 0 -12px;
   width: 240px;
   height: 272px;
@@ -588,7 +83,7 @@ ul li {
   text-align: start;
 }
 
-.annonce > h4 {
+.annonce-grid > h4 {
   padding: 111px 0px 0px 125px;
   line-height: 35px;
   font-family: "Raleway Heavy";
@@ -598,15 +93,6 @@ ul li {
   color: #333333;
 }
 
-.products {
-  margin: 0 40px 0 0;
-  flex-direction: column;
-}
-
-.products h3 {
-  padding: 3px 0px 0 24px;
-  margin: 20px 0 22px 0;
-}
 
 .viewed-products {
   width: 780px;
@@ -679,75 +165,10 @@ ul li {
   text-align: right;
 }
 
-.product {
-  position: relative;
-}
-
-.product .name {
-  width: 70%;
-  word-break: break-all;
-}
 
 .product .name,
 .text-product .price {
   margin-top: 8px;
-}
-
-.text-product .price {
-  display: flex;
-  flex-direction: column;
-  width: 30%;
-  height: fit-content;
-}
-
-.text-product .price p:nth-child(2n) {
-  margin: 0;
-}
-
-.triangle-new::after {
-  content: "";
-  position: absolute; /* Абсолютное позиционирование */
-  /* поскольку это квадрат, его надо смещать на его размер (бордера) */
-  right: -36px;
-  top: -33px;
-  border: 30px solid transparent;
-  border-top: 30px solid red; /* Добавляем треугольник */
-  transform: rotate(225deg);
-}
-.triangle-new::before {
-  content: "NEW";
-  position: absolute; /* Абсолютное позиционирование */
-  right: 0px;
-  top: 4px;
-  /* нужно для того, чтобы отобразить выше треугольника */
-  z-index: 122;
-  font-size: 9px;
-  color: #fff;
-}
-
-.triangle-hot::after {
-  content: "";
-  position: absolute;
-  right: -36px;
-  top: -33px;
-  border: 30px solid transparent;
-  border-top: 30px solid yellow;
-  transform: rotate(225deg);
-}
-.triangle-hot::before {
-  content: "HOT";
-  position: absolute;
-  right: 0px;
-  top: 4px;
-  z-index: 122;
-  font-size: 9px;
-  color: black;
-}
-
-.product p span {
-  color: red;
-  text-decoration: line-through;
-  font-size: 14px;
 }
 
 .viewed-products img {
